--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/about.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/about.css">
   <link rel="stylesheet" href="https://use.typekit.net/ydd1ngr.css">
   <link rel="stylesheet" href="https://use.typekit.net/ydd1ngr.css">
   <title>contents</title>
@@ -58,16 +58,16 @@
       </div><!-- .about__list -->
 
       <div class="about__col2 s2flex">
-        <div class="s2img"><img src="/images/blks2.jpg" alt=""></div>
-        <div class="s2img"><img src="/images/s2.jpg" alt=""></div>
-        <div class="s2img"><img src="/images/blks2.jpg" alt=""></div>
+        <div class="s2img"><img src="images/blks2.jpg" alt=""></div>
+        <div class="s2img"><img src="images/s2.jpg" alt=""></div>
+        <div class="s2img"><img src="images/blks2.jpg" alt=""></div>
       </div>
 
       <h3 class="about__list--good">Effort</h3>
 
       <div class="effort__box">
         Ï<div class="aboutBox__list--s2">
-          <img src="/images/htmlcss.gif" alt="" class="efs2">
+          <img src="images/htmlcss.gif" alt="" class="efs2">
         </div>
         <div class="effort__box--item">
           <p>HTMLのコーディングを頑張っています。<br>
@@ -79,7 +79,7 @@
 
       <div class="effort__box">
         Ï<div class="aboutBox__list--s2">
-          <img src="/images/scss.gif" alt="">
+          <img src="images/scss.gif" alt="">
         </div>
         <div class="effort__box--item">
           <p>SCSSでサイトデザインができるよう頑張っています。<br>
