--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="ja">
 
 <head>
-  <link rel="apple-touch-icon" sizes="72x72" href="/images/favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
-<link rel="manifest" href="/images/favicon/site.webmanifest">
-<link rel="mask-icon" href="/images/favicon/safari-pinned-tab.svg" color="#d7a0d7">
+  <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+<link rel="manifest" href="images/favicon/site.webmanifest">
+<link rel="mask-icon" href="images/favicon/safari-pinned-tab.svg" color="#d7a0d7">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
   <meta charset="UTF-8">
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
   <link rel="stylesheet" href="https://use.typekit.net/ydd1ngr.css">
   <link rel="stylesheet" href="https://use.typekit.net/ydd1ngr.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://use.typekit.net/ydd1ngr.css">
   <link rel="stylesheet" href="https://use.typekit.net/ydd1ngr.css">
 
@@ -75,44 +75,44 @@
         <section id="skill" class="skillBox centerBox">
           <p class="cateBox">Coding</p>
           <div class="skill__list part2">
-            <div class="skill__list--item"><img src="/images/htmlcss.gif" alt=""></div>
+            <div class="skill__list--item"><img src="images/htmlcss.gif" alt=""></div>
             <div class="skill__list--item">html5&nbsp;/&nbsp;css3</div>
-            <div class="skill__list--item"><img src="/images/scss.gif" alt=""></div>
+            <div class="skill__list--item"><img src="images/scss.gif" alt=""></div>
             <div class="skill__list--item">Scss</div>
-            <div class="skill__list--item"><img src="/images/javascript.gif" alt=""></div>
+            <div class="skill__list--item"><img src="images/javascript.gif" alt=""></div>
             <div class="skill__list--item">JavaScript</div>
-            <div class="skill__list--item"><img src="/images/jquery.gif" alt=""></div>
+            <div class="skill__list--item"><img src="images/jquery.gif" alt=""></div>
             <div class="skill__list--item">JQuery</div>
-            <div class="skill__list--item"><img src="/images/wordpress.gif" alt=""></div>
+            <div class="skill__list--item"><img src="images/wordpress.gif" alt=""></div>
             <div class="skill__list--item">WordPress</div>
-            <div class="skill__list--item"><img src="/images/php.gif" alt=""></div>
+            <div class="skill__list--item"><img src="images/php.gif" alt=""></div>
             <div class="skill__list--item">PHP</div>
-            <div class="skill__list--item"><img src="/images/responsive.gif" alt="" class="res"></div>
+            <div class="skill__list--item"><img src="images/responsive.gif" alt="" class="res"></div>
             <div class="skill__list--item">Responsive</div>
           </div><!-- skill__list -->
 
           <p class="cateBox">Design</p>
           <div class="skill__list part2">
-            <div class="skill__list--item"><img src="/images/photoshop.gif" alt=""></div>
+            <div class="skill__list--item"><img src="images/photoshop.gif" alt=""></div>
             <div class="skill__list--item">Photoshop</div>
-            <div class="skill__list--item"><img src="/images/illustrator.gif" alt=""></div>
+            <div class="skill__list--item"><img src="images/illustrator.gif" alt=""></div>
             <div class="skill__list--item">illastlator</div>
-            <div class="skill__list--item"><img src="/images/xd.gif" alt=""></div>
+            <div class="skill__list--item"><img src="images/xd.gif" alt=""></div>
             <div class="skill__list--item">Xd</div>
           </div><!-- skill__list -->
 
           <p class="cateBox">Office</p>
           <div class="skill__list">
-            <div class="skill__list--item"><img src="/images/exel.gif" alt=""></div>
+            <div class="skill__list--item"><img src="images/exel.gif" alt=""></div>
             <div class="skill__list--item">Exel</div>
-            <div class="skill__list--item"><img src="/images/powerpoint.gif" alt=""></div>
+            <div class="skill__list--item"><img src="images/powerpoint.gif" alt=""></div>
             <div class="skill__list--item">PowerPoint</div>
-            <div class="skill__list--item"><img src="/images/word.gif" alt=""></div>
+            <div class="skill__list--item"><img src="images/word.gif" alt=""></div>
             <div class="skill__list--item">Word</div>
           </div>
           <p class="cateBox">Movie</p>
           <div class="skill__list">
-            <div class="skill__list--item"><img src="/images/premierepro.gif" alt=""></div>
+            <div class="skill__list--item"><img src="images/premierepro.gif" alt=""></div>
             <div class="skill__list--item">PremierePro</div>
           </div>
 
@@ -127,7 +127,7 @@
           <!-- grid親 -->
           <div class="about__list">
             <!-- grid子 -->
-            <img src="/images/iconimg.jpeg" alt="モリマユコアイコン" class="about__list--img">
+            <img src="images/iconimg.jpeg" alt="モリマユコアイコン" class="about__list--img">
 
             <div class="about__list--item">
               <p class="about__list--text">広島でWeb制作を勉強している28歳女性。</p>
@@ -145,7 +145,7 @@
           
           <div class="about__list--likes">
             <!-- <div class="about__list--likes--1"> -->
-              <img src="/images/s2.jpg" alt="" class="s2">
+              <img src="images/s2.jpg" alt="" class="s2">
             <!-- </div> -->
             <p class="aboutLike">食べること。おしゃれに勤しむこと。おしゃべりすること。家でボーっとすることが好きです。<br>
               好奇心旺盛なので新しいことが大好きです。<br>
