--- a/portfolio/html/index.html
+++ b/portfolio/html/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="../../css/style.css">
   <link rel="stylesheet" href="https://use.typekit.net/ydd1ngr.css">
   <link rel="stylesheet" href="https://use.typekit.net/ydd1ngr.css">
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
 
   <title>morimayuko portfolio</title>
@@ -45,6 +46,14 @@
       <span></span>
       <span></span>
     </p>
+  </div>
+  <div id="hamburger">
+    <p class="btn-gNav open">
+      <span></span>
+      <span></span>
+      <span></span>
+    </p>
+  </div>
     <!-- gnavのwrapper -->
     <div class="gnav">
       <nav id="gNav">
@@ -222,7 +231,7 @@
   <footer>
     <p><small>&copy;2021&nbsp;MoriMayuko</small></p>
   </footer>
-  <!-- <script src="../js/portfolio.js"></script> -->
+  <script src="../js/portfolio.js"></script>
 </body>
 
 </html>
