--- a/portfolio/html/index.html
+++ b/portfolio/html/index.html
@@ -47,13 +47,13 @@
       <span></span>
     </p>
   </div>
-  <div id="hamburger">
+  <!-- <div id="hamburger">
     <p class="btn-gNav open">
       <span></span>
       <span></span>
       <span></span>
     </p>
-  </div>
+  </div> -->
     <!-- gnavのwrapper -->
     <div class="gnav">
       <nav id="gNav">
