--- a/portfolio/html/about.html
+++ b/portfolio/html/about.html
@@ -2,6 +2,11 @@
 <html lang="ja">
 
 <head>
+  <link rel="apple-touch-icon" sizes="72x72" href="../images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon/favicon-16x16.png">
+  <link rel="manifest" href="../../images/favicon/site.webmanifest">
+  <link rel="mask-icon" href="../../images/favicon/safari-pinned-tab.svg" color="#d7a0d7">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,9 +15,16 @@
   <link rel="stylesheet" href="/css/about.css">
   <link rel="stylesheet" href="https://use.typekit.net/ydd1ngr.css">
   <link rel="stylesheet" href="https://use.typekit.net/ydd1ngr.css">
-  <title>contents</title>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <title>About</title>
 </head>
-
+<div id="hamburger">
+  <p class="btn-gNav">
+    <span></span>
+    <span></span>
+    <span></span>
+  </p>
+</div>
 <body>
   <section>
     <header class="headerTop">
@@ -21,14 +33,16 @@
         <h1><a href="#index.html">morimayuko&nbsp;portfolio</a></h1>
       </div><!-- headerTop__img -->
       <div class="gnav">
+        <nav id="gNav">
         <!-- flex親要素 -->
-        <ul class="gnav__link">
+        <ul class="gnav__link gNav-menu" id="gnavi-link">
           <!-- flex子要素 -->
           <!-- <li class="gnav__item"><a href="#">work</a></li> -->
           <li class="gnav__item"><a class="my-parts" href="index.html#skill">skill</a></li>
           <li class="gnav__item"><a class="my-parts" href="#about">about</a></li>
           <li class="gnav__item"><a class="my-parts" href="index.html#contact">contact</a></li>
         </ul><!-- .gnav__link -->
+      </nav>
       </div><!-- .gnav -->
     </header>
   </section>
@@ -58,16 +72,16 @@
       </div><!-- .about__list -->
 
       <div class="about__col2 s2flex">
-        <div class="s2img"><img src="/images/blks2.jpg" alt=""></div>
-        <div class="s2img"><img src="/images/s2.jpg" alt=""></div>
-        <div class="s2img"><img src="/images/blks2.jpg" alt=""></div>
+        <div class="s2img"><img src="../images/blks2.jpg" alt=""></div>
+        <div class="s2img"><img src="../images/s2.jpg" alt=""></div>
+        <div class="s2img"><img src="../images/blks2.jpg" alt=""></div>
       </div>
 
       <h3 class="about__list--good">Effort</h3>
 
       <div class="effort__box">
         Ï<div class="aboutBox__list--s2">
-          <img src="/images/htmlcss.gif" alt="" class="efs2">
+          <img src="../images/htmlcss.gif" alt="" class="efs2">
         </div>
         <div class="effort__box--item">
           <p>HTMLのコーディングを頑張っています。<br>
@@ -79,7 +93,7 @@
 
       <div class="effort__box">
         Ï<div class="aboutBox__list--s2">
-          <img src="/images/scss.gif" alt="">
+          <img src="../images/scss.gif" alt="">
         </div>
         <div class="effort__box--item">
           <p>SCSSでサイトデザインができるよう頑張っています。<br>
@@ -89,6 +103,18 @@
         </div>
       </div><!-- effort__box -->
 
+      <div class="dream">
+        <h3 class="about__list--good dream__list">Dream</h3>
+        <p class="dream__text">私には夢があります。</p>
+        <p>求職者支援訓練に入学してから最近できた夢です。<br>
+          求職者支援訓練校に入学するまでは、漠然とした将来性でした。<br>
+          ですが今ではコーディングの楽しさを知り、<br>もっとこの業界のことを知りたいと考えています。<br>
+        </p>
+        <p class="dream__text">今の私の夢は、この業界で生きていくことです。<br>
+          これからも勉強を続け、もっとコーディングの楽しさ、<br>そして厳しさを知っていきたいです。<br>
+          御社の人材として精一杯頑張っていきたいと心より感じております。
+        </p>
+      </div>
 
   </div><!-- aboutBox__list--item -->
 
@@ -98,9 +124,8 @@
   <footer>
     <p><small>&copy;2021&nbsp;MoriMayuko</small></p>
   </footer>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <!--自作のJS-->
+  
+  <script src="../js/portfolio.js"></script>
 </body>
 
 </html>
