レスポンシブ修正

--- a/portfolio/html/index.html
+++ b/portfolio/html/index.html
@@ -94,44 +94,114 @@
         <p class="cateBox">Coding</p>
         <div class="skill__list part2">
           <div class="skill__list--item"><img src="../../images/htmlcss.gif" alt=""></div>
-          <div class="skill__list--item">html5&nbsp;/&nbsp;css3</div>
+          <div class="skillLevel">
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+          </div>
+          <div class="skill__list--item moji2">html5&nbsp;/&nbsp;css3</div>
           <div class="skill__list--item"><img src="../../images/scss.gif" alt=""></div>
-          <div class="skill__list--item">Scss</div>
+          <div class="skillLevel">
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+          </div>
+          <div class="skill__list--item moji2">Scss</div>
           <div class="skill__list--item"><img src="../../images/javascript.gif" alt=""></div>
-          <div class="skill__list--item">JavaScript</div>
+          <div class="skillLevel">
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/blks2.jpg" alt=""></div>
+          </div>
+          <div class="skill__list--item moji2">JavaScript</div>
           <div class="skill__list--item"><img src="../../images/jquery.gif" alt=""></div>
-          <div class="skill__list--item">JQuery</div>
+          <div class="skill__list--item moji2">JQuery</div>
+          <div class="skillLevel">
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/blks2.jpg" alt=""></div>
+          </div>
           <div class="skill__list--item"><img src="../../images/wordpress.gif" alt=""></div>
-          <div class="skill__list--item">WordPress</div>
+          <div class="skill__list--item moji2">WordPress</div>
+          <div class="skillLevel">
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/blks2.jpg" alt=""></div>
+          </div>
           <div class="skill__list--item"><img src="../../images/php.gif" alt=""></div>
-          <div class="skill__list--item">PHP</div>
+          <div class="skill__list--item moji2">PHP</div>
+          <div class="skillLevel">
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/blks2.jpg" alt=""></div>
+          </div>
           <div class="skill__list--item"><img src="../../images/responsive.gif" alt="" class="res"></div>
-          <div class="skill__list--item">Responsive</div>
+          <div class="skill__list--item moji2">Responsive</div>
+          <div class="skillLevel">
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+          </div>
         </div><!-- skill__list -->
 
         <p class="cateBox">Design</p>
         <div class="skill__list part2">
           <div class="skill__list--item"><img src="../../images/photoshop.gif" alt=""></div>
-          <div class="skill__list--item">Photoshop</div>
+          <div class="skill__list--item moji2">Photoshop</div>
+          <div class="skillLevel">
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+          </div>
           <div class="skill__list--item"><img src="../../images/illustrator.gif" alt=""></div>
-          <div class="skill__list--item">illastlator</div>
+          <div class="skill__list--item moji2">illastlator</div>
+          <div class="skillLevel">
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/blks2.jpg" alt=""></div>
+          </div>
           <div class="skill__list--item"><img src="../../images/xd.gif" alt=""></div>
-          <div class="skill__list--item">Xd</div>
+          <div class="skill__list--item moji2">Xd</div>
+          <div class="skillLevel">
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+          </div>
         </div><!-- skill__list -->
 
         <p class="cateBox">Office</p>
         <div class="skill__list">
           <div class="skill__list--item"><img src="../../images/exel.gif" alt=""></div>
-          <div class="skill__list--item">Exel</div>
+          <div class="skill__list--item moji2">Exel</div>
+          <div class="skillLevel">
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/blks2.jpg" alt=""></div>
+          </div>
           <div class="skill__list--item"><img src="../../images/powerpoint.gif" alt=""></div>
-          <div class="skill__list--item">PowerPoint</div>
+          <div class="skill__list--item moji2">PowerPoint</div>
+          <div class="skillLevel">
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+          </div>
           <div class="skill__list--item"><img src="../../images/word.gif" alt=""></div>
-          <div class="skill__list--item">Word</div>
+          <div class="skill__list--item moji2">Word</div>
+          <div class="skillLevel">
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/blks2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/blks2.jpg" alt=""></div>
+          </div>
         </div>
         <p class="cateBox">Movie</p>
         <div class="skill__list">
           <div class="skill__list--item"><img src="../../images/premierepro.gif" alt=""></div>
-          <div class="skill__list--item">PremierePro</div>
+          <div class="skill__list--item moji2">PremierePro</div>
+          <div class="skillLevel">
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+            <div class="skill__list--item moji"><img src="../images/s2.jpg" alt=""></div>
+          </div>
         </div>
 
         </section>
